* installer updating works again

--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -5,6 +5,8 @@
 		<label index="installationSteps">Installation steps</label>
 		<label index="servercheckResults">Results of server check:</label>
 		<label index="yourVersion">Your Version:</label>
+		<label index="selectDB">Select a Database</label>
+		<label index="orCreateDB">or create new:</label>
 		<label index="dbConnectionStored">DB connection is stored.</label>
 		<label index="importStaticData">Import static data now.</label>
 		<label index="foldersFilesWritable">Folders / files writable</label>
@@ -25,6 +27,8 @@
 		<label index="error">Error</label>
 		<label index="error.changeAdminPassword">Change admin password for your security!</label>
 		<label index="error.incorrectDbConnectionSetup">Please correct the Database connection setup below:</label>
+		<label index="error.nameTaken">This name is already taken!</label>
+		<label index="error.dbServerConnectionFailed">Database creation / select failed please correct the setup</label>
 		<label index="affirm.dbServerConnectionOk">Database server connection verified</label>
 		<label index="affirm.dbIsUptodate">Congratulations! your database is up to date.</label>
 		<label index="instruction.enterDbConnectionDetails">Please enter the database server connection details:</label>
@@ -34,13 +38,15 @@
 		<label index="title.serverCheck">Server Check</label>
 		<label index="title.setupDatabaseServerConnection">Setup Database Server Connection</label>
 		<label index="title.setupDatabase">Setup Database</label>
+		<label index="title.dbServerConnectionValidated">Database server connection validated.</label>
 		<label index="title.importStaticData">Import Static Data</label>
-		<label index="title.systemConfig">System config</label>
+		<label index="title.systemConfig">Todoyu system config</label>
 		<label index="title.changeAdminPassword">Change admin password</label>
 		<label index="title.finished">Installation finished</label>
 		<label index="title.welcomeToTodoyuUpdate">Welcome to todoyu update!</label>
 		<label index="title.welcomeToUpdate">Welcome to datebase update</label>
-		<label index="title.detectedUpdateCoreChanges">The following database updates have been detected:</label>
+		<label index="title.doneCoreChanges">The following database updates have been conducted:</label>
+		<label index="title.doneGenericChanges">The following extension tables' updates have been conducted:</label>
 		<label index="title.dbUpdateCheck">Database update check</label>
 		<label index="title.updateFinished">Update finished</label>
 		<label index="step.licenseAgreement">License agreement</label>
@@ -54,12 +60,13 @@
 		<label index="button.testConnection">Test connection</label>
 		<label index="button.checkConnectionData">Check connection data</label>
 		<label index="button.saveDatabaseSetup">Save Database Setup</label>
-		<label index="button.checkExtensions">Perform Updates, scan for extensions updates</label>
+		<label index="button.genericUpdate">Update extensions tables</label>
 		<label index="button.importStaticData">Import static database data</label>
 		<label index="button.saveConfiguration">Save configuration</label>
+		<label index="button.saveSystemConfiguration">Save system configuration</label>
 		<label index="button.changeAdminPassword">Change admin password</label>
 		<label index="button.disableAndLogIn">Disable installer and go to login</label>
-		<label index="button.dbUpdate">Start todoyu update: Check database</label>
+		<label index="button.dbUpdate">Update system database</label>
 		<label index="button.finishUpdate">Finish update</label>
 		<label index="panel.title.licenseInformation">License information</label>
 		<label index="progress.label.welcome">License agreement</label>
@@ -70,8 +77,8 @@
 		<label index="progress.label.systemconfig">General system configuration</label>
 		<label index="progress.label.setadminpassword">Set admin password</label>
 		<!--  <label index="progress.label.saveadminpassword">Save Administrator Password</label>  -->
-		<label index="progress.label.welcometoupdate">Check installed version, database</label>
-		<label index="progress.label.updatetocurrentversion">Perform database updates</label>
+		<label index="progress.label.welcometoupdate">System database version updates</label>
+		<label index="progress.label.updatetocurrentversion">Extensions database updates</label>
 		<label index="progress.label.dbstructurecheck">Update extensions</label>
 		<label index="progress.label.finishupdate">Update extensions DB tables</label>
 		<!-- <label index="progress.label.exit">Start todoyu</label>  -->
