* Added TodoyuCurrency * Finishing Locale * Added locale to installer template

--- a/core/locale/locale.xml
+++ b/core/locale/locale.xml
@@ -109,6 +109,111 @@
 	    <label index="vi_VN">Vietnamese (Vietnam)</label>
 	</labels>
 	<labels lang="de">
-
+		<label index="sq_AL">Albanisch (Albanien)</label>
+	    <label index="ar_DZ">Arabisch (Algeria)</label>
+	    <label index="ar_BH">Arabisch (Bahrain)</label>
+	    <label index="ar_EG">Arabisch (Egypt)</label>
+	    <label index="ar_IQ">Arabisch (Iraq)</label>
+	    <label index="ar_JO">Arabisch (Jordan)</label>
+	    <label index="ar_KW">Arabisch (Kuwait)</label>
+	    <label index="ar_LB">Arabisch (Lebanon)</label>
+	    <label index="ar_LY">Arabisch (Libya)</label>
+	    <label index="ar_MA">Arabisch (Morocco)</label>
+	    <label index="ar_OM">Arabisch (Oman)</label>
+	    <label index="ar_QA">Arabisch (Qatar)</label>
+	    <label index="ar_SA">Arabisch (Saudi Arabia)</label>
+	    <label index="ar_SD">Arabisch (Sudan)</label>
+	    <label index="ar_SY">Arabisch (Syria)</label>
+	    <label index="ar_TN">Arabisch (Tunisia)</label>
+	    <label index="ar_AE">Arabisch (United Arab Emirates)</label>
+	    <label index="ar_YE">Arabisch (Yemen)</label>
+	    <label index="be_BY">Belarusian (Belarus)</label>
+	    <label index="bg_BG">Bulgarisch (Bulgaria)</label>
+	    <label index="ca_ES">Catalan (Spain)</label>
+	    <label index="zh_CN">Chinesisch (China)</label>
+	    <label index="zh_HK">Chinesisch (Hong Kong)</label>
+	    <label index="zh_SG">Chinesisch (Singapore)</label>
+	    <label index="zh_TW">Chinesisch (Taiwan)</label>
+	    <label index="hr_HR">Kroatisch (Croatia)</label>
+	    <label index="cs_CZ">Tschechisch (Czech Republic)</label>
+	    <label index="da_DK">Dänisch (Denmark)</label>
+	    <label index="nl_BE">Holländisch (Belgium)</label>
+	    <label index="nl_NL">Holländisch (Netherlands)</label>
+	    <label index="en_AU">Englisch (Australien)</label>
+	    <label index="en_CA">Englisch (Kanada)</label>
+	    <label index="en_IN">Englisch (Indien)</label>
+	    <label index="en_IE">Englisch (Irland)</label>
+	    <label index="en_MT">Englisch (Malta)</label>
+	    <label index="en_NZ">Englisch (Neuseeland)</label>
+	    <label index="en_PH">Englisch (Philippinen)</label>
+	    <label index="en_SG">Englisch (Singapur)</label>
+	    <label index="en_ZA">Englisch (Süd Afrika)</label>
+	    <label index="en_GB">Englisch (Grossbritanien)</label>
+	    <label index="en_US">Englisch (Vereinigte Staaten von Amerika)</label>
+	    <label index="et_EE">Estonian (Estland)</label>
+	    <label index="fi_FI">Finnisch (Finland)</label>
+	    <label index="fr_BE">Französisch (Belgien)</label>
+	    <label index="fr_CA">Französisch (Kanada)</label>
+	    <label index="fr_FR">Französisch (Frankreich)</label>
+	    <label index="fr_LU">Französisch (Luxemburg)</label>
+	    <label index="fr_CH">Französisch (Schweiz)</label>
+	    <label index="de_AT">Deutsch (Österreich)</label>
+	    <label index="de_DE">Deutsch (Deutschland)</label>
+	    <label index="de_LU">Deutsch (Luxemburg)</label>
+	    <label index="de_CH">Deutsch (Schweiz)</label>
+	    <label index="el_CY">Griechisch (Cyprus)</label>
+	    <label index="el_GR">Griechisch (Greece)</label>
+	    <label index="iw_IL">Hebräisch (Israel)</label>
+	    <label index="hi_IN">Hindi (India)</label>
+	    <label index="hu_HU">Ungarisch (Hungary)</label>
+	    <label index="is_IS">Icelandic (Iceland)</label>
+	    <label index="in_ID">Indonesisch (Indonesia)</label>
+	    <label index="ga_IE">Irisch (Ireland)</label>
+	    <label index="it_IT">Italienisch (Italien)</label>
+	    <label index="it_CH">Italienisch (Schweiz)</label>
+	    <label index="ja_JP">Japanisch (Japan)</label>
+	    <label index="ko_KR">Koreanisch (South Korea)</label>
+	    <label index="lv_LV">Latvian (Latvia)</label>
+	    <label index="lt_LT">Lithuanian (Lithuania)</label>
+	    <label index="mk_MK">Mazedonisch (Macedonia)</label>
+	    <label index="ms_MY">Malaysisch (Malaysia)</label>
+	    <label index="mt_MT">Maltesisch (Malta)</label>
+	    <label index="no_NO">Norwegisch (Norway)</label>
+	    <label index="pl_PL">Polnisch (Poland)</label>
+	    <label index="pt_BR">Portugisisch (Brazil)</label>
+	    <label index="pt_PT">Portugisisch (Portugal)</label>
+	    <label index="ro_RO">Rumänisch (Romania)</label>
+	    <label index="ru_RU">Russisch (Russia)</label>
+	    <label index="sr_BA">Serbisch (Bosnia and Herzegovina)</label>
+	    <label index="sr_ME">Serbisch (Montenegro)</label>
+	    <label index="sr_CS">Serbisch (Serbia and Montenegro)</label>
+	    <label index="sr_RS">Serbisch (Serbia)</label>
+	    <label index="sk_SK">Slovakisch (Slovakia)</label>
+	    <label index="sl_SI">Slovenisch (Slovenia)</label>
+	    <label index="es_AR">Spanisch (Argentina)</label>
+	    <label index="es_BO">Spanisch (Bolivia)</label>
+	    <label index="es_CL">Spanisch (Chile)</label>
+	    <label index="es_CO">Spanisch (Colombia)</label>
+	    <label index="es_CR">Spanisch (Costa Rica)</label>
+	    <label index="es_DO">Spanisch (Dominican Republic)</label>
+	    <label index="es_EC">Spanisch (Ecuador)</label>
+	    <label index="es_SV">Spanisch (El Salvador)</label>
+	    <label index="es_GT">Spanisch (Guatemala)</label>
+	    <label index="es_HN">Spanisch (Honduras)</label>
+	    <label index="es_MX">Spanisch (Mexico)</label>
+	    <label index="es_NI">Spanisch (Nicaragua)</label>
+	    <label index="es_PA">Spanisch (Panama)</label>
+	    <label index="es_PY">Spanisch (Paraguay)</label>
+	    <label index="es_PE">Spanisch (Peru)</label>
+	    <label index="es_PR">Spanisch (Puerto Rico)</label>
+	    <label index="es_ES">Spanisch (Spain)</label>
+	    <label index="es_US">Spanisch (United States)</label>
+	    <label index="es_UY">Spanisch (Uruguay)</label>
+	    <label index="es_VE">Spanisch (Venezuela)</label>
+	    <label index="sv_SE">Spanisch (Sweden)</label>
+	    <label index="th_TH">Thai (Thailand)</label>
+	    <label index="tr_TR">Türkisch (Turkey)</label>
+	    <label index="uk_UA">Ukrainisch (Ukraine)</label>
+	    <label index="vi_VN">Vietnamesisch (Vietnam)</label>
 	</labels>
 </locallang>
