--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -1,25 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <locallang>
 	<labels lang="en">
-		<label index="lgplThirdPartyLibsLicenses">The following third party libraries are licensed under LGPL v2.1:</label>
+		<label index="install.eula">End user license agreement for todoyu</label>
+		<label index="install.lgpl">The following third party libraries are licensed under LGPL v2.1:</label>
+		<label index="install.title">todoyu installer</label>
+		<label index="install.button">I accept, install todoyu</label>
+		<label index="install.text">Welcome to the todoyu installer!</label>
+		<label index="servercheck.title">Server Check</label>
+		<label index="servercheck.button">Setup Database Configuration</label>
+		<label index="servercheck.yourphpversion">Your version</label>
+		<label index="servercheck.yourphpversion.ok">OK</label>
+		<label index="servercheck.yourphpversion.error">TOO LOW</label>
+		<label index="servercheck.writableCheck">Folders / files writable</label>
+		<label index="servercheck.writable">writable</label>
+		<label index="servercheck.notWritable">NOT WRITABLE</label>
+		<label index="servercheck.ready">Server is ready for todoyu 2.0</label>
+		<label index="servercheck.notReady">Server is NOT ready for todoyu 2.0</label>
+		<label index="dbconnection.title">Setup Database Server Connection</label>
+		<label index="dbconnection.button">Update database configuration</label>
+		<label index="dbconnection.server">Server</label>
+		<label index="dbconnection.username">Username</label>
+		<label index="dbconnection.password">Password</label>
+		<label index="dbconnection.text">Enter your database connection data</label>
+		<label index="dbselect.title">Select database</label>
+		<label index="dbselect.button">Save Database Setup</label>
+		<label index="dbselect.text.saved">Database connection saved</label>
+		<label index="dbselect.text.notCreated">Cannot create new database on server</label>
+		<label index="dbselect.text.dbNameExists">A database with this name already exists</label>
+		<label index="importtables.title">Import tables and data</label>
+		<label index="importtables.button">Import tables and data</label>
+		<label index="importtables.coretables">TODOYU CORE DATABASE TABLES</label>
+		<label index="importtables.exttables">TODOYU EXTENSIONS DATABASE TABLES</label>
+		<label index="systemconfig.title">todoyu system settings</label>
+		<label index="systemconfig.button">Save system configuration</label>
+		<label index="systemconfig.systemName">System Name</label>
+		<label index="systemconfig.systemEmail">System Email</label>
+		<label index="systemconfig.language">Language</label>
+		<label index="systemconfig.locale">Locale</label>
+		<label index="systemconfig.text">Select your todoyu system settings</label>
+		<label index="systemconfig.text.error">Please enter a system name and email</label>
+		<label index="adminpassword.title">Change admin password</label>
+		<label index="adminpassword.button">Change admin password</label>
+		<label index="adminpassword.username">Username</label>
+		<label index="adminpassword.password">Password</label>
+		<label index="adminpassword.repeatPassword">Repeat Password</label>
+		<label index="adminpassword.passwordHint">at least 5 characters</label>
+		<label index="finish.title">Installation finished</label>
+		<label index="finish.button">Disable installer and go to login</label>
+		<label index="finish.text">Installation finished</label>
+		<label index="update.title">Welcome to datebase update</label>
+		<label index="update.button">Update system database</label>
+		<label index="update.info">Apply database changes for your current version and compare current columns with file configuration</label>
+		<label index="updatetocurrentversion.title">Update database</label>
+		<label index="updatetocurrentversion.button">Apply database changes</label>
+		<label index="updatetocurrentversion.noupdates">Your database is up-to-date. No updates necessary</label>
+		<label index="updatetocurrentversion.noupdates">Your database is up-to-date. No updates necessary</label>
+		<label index="finishupdate.title">Finish update</label>
+		<label index="finishupdate.button">Disable installer and go to login</label>
+		<label index="finishupdate.text">Installer has updated your todoyu version</label>
+
+
+
+
 		<label index="installationSteps">Installation steps</label>
 		<label index="servercheckResults">Results of server check:</label>
 		<label index="yourVersion">Your Version:</label>
 		<label index="selectDB">Select a Database</label>
 		<label index="orCreateDB">or create new:</label>
 		<label index="dbConnectionStored">DB connection is stored.</label>
-		<label index="importStaticData">Import static data now.</label>
-		<label index="foldersFilesWritable">Folders / files writable</label>
-		<label index="writable">writable</label>
-		<label index="notWritable">NOT WRITABLE</label>
-		<label index="server">Server</label>
-		<label index="username">Username</label>
-		<label index="password">Password</label>
+		<label index="importTablesAndData">Import database tables and basic table data</label>
+
+
+
 		<label index="repeatPassword">Repeat Password</label>
-		<label index="systemName">System Name</label>
-		<label index="systemEmail">System Email</label>
-		<label index="language">Language</label>
-		<label index="locale">Locale</label>
+
+
 		<label index="updateSteps">Update steps</label>
 		<label index="generalUpdate">General update</label>
 		<label index="dbAnalyzer">DB-Analyzer</label>
@@ -33,15 +88,15 @@
 		<label index="affirm.dbServerConnectionOk">Database server connection verified</label>
 		<label index="affirm.dbIsUptodate">Congratulations! your database is up to date.</label>
 		<label index="instruction.enterDbConnectionDetails">Please enter the database server connection details:</label>
-		<label index="title.license">End user license agreement for todoyu beta3</label>
+		<label index="title.license"></label>
 		<label index="title.welcomeToInstaller">Welcome to the todoyu installer!</label>
 		<label index="title.welcome">Welcome</label>
-		<label index="title.serverCheck">Server Check</label>
+
 		<label index="title.setupDatabaseServerConnection">Setup Database Server Connection</label>
 		<label index="title.setupDatabase">Setup Database</label>
 		<label index="title.dbServerConnectionValidated">Database server connection validated.</label>
-		<label index="title.importStaticData">Import Static Data</label>
-		<label index="title.systemConfig">Todoyu system config</label>
+		<label index="title.importTablesAndData">Import Static Data</label>
+		<label index="title.systemConfig">Select your todoyu system settings</label>
 		<label index="title.changeAdminPassword">Change admin password</label>
 		<label index="title.finished">Installation finished</label>
 		<label index="title.welcomeToTodoyuUpdate">Welcome to todoyu update!</label>
@@ -55,14 +110,13 @@
 		<label index="step.databaseConnectionSetup">Database connection setup</label>
 		<label index="step.importStaticData">Import static data</label>
 		<label index="step.setAdminPassword">Set administrator password</label>
-		<label index="button.iAcceptLicense">I accept the terms in the license agreement</label>
-		<label index="button.checkServerCompatibility">Check server compatibility</label>
-		<label index="button.configureDatabase">Server Check succeeded, configure database now</label>
-		<label index="button.testConnection">Test connection</label>
+
+
+		<label index="button.updateDbConfig">Update database configuration</label>
 		<label index="button.checkConnectionData">Check connection data</label>
 		<label index="button.saveDatabaseSetup">Save Database Setup</label>
 		<label index="button.genericUpdate">Update extensions tables</label>
-		<label index="button.importStaticData">Import static database data</label>
+		<label index="button.importTablesAndData">Import tables and data</label>
 		<label index="button.saveConfiguration">Save configuration</label>
 		<label index="button.saveSystemConfiguration">Save system configuration</label>
 		<label index="button.changeAdminPassword">Change admin password</label>
